# First-Glance

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
src/first-glance/core/: __init__.py
src/first_glance/: __init__.py  app.py  main.py  types.py
src/first_glance/agents/: __init__.py  linkedin_lookup_agent.py
src/first_glance/ai/: __init__.py  output_parsers.py
src/first_glance/ai/agents/: linkedin_lookup_agent.py
src/first_glance/ai/tools/: __init__.py
src/first_glance/api/: __init__.py  routes.py
src/first_glance/api/middlewares/: __init__.py  cors_middleware.py  error_middleware.py
src/first_glance/core/: __init__.py  langsmith_config.py  settings.py
src/first_glance/models/: __init__.py  llm_schemas.py  request_dtos.py  response_dtos.py
src/first_glance/services/: __init__.py  first_glance.py  first_glance_with.py  linkedin.py
src/first_glance/third_parties/: __init__.py  linkedin.py
src/first_glance/tools/: tools.py
src/first_glance/types/: __init__.py  utils_types.py
src/first_glance/utils/: __init__.py  date_time.py  decorators.py  template_utils.py
src/ice_breaker/core/: settings.py
static/css/: styles.css
static/js/: script.js
templates/: index.html
