[project]
name = "ice-breaker"
version = "0.1.0"
description = ""
authors = [{ name = "rahuljsaliaan", email = "rahuljsaliaan@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13 <4.0"
dependencies = [
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-openai (>=0.3.14,<0.4.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "langchainhub (>=0.1.21,<0.2.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
]

[tool.poetry]
packages = [{ include = "ice_breaker", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
