[project]
name = "first-glance"
version = "0.1.0"
description = "AI-powered app that summarizes LinkedIn profiles with key insights and photos — helping you break the ice at first glance."
authors = [{ name = "rahuljsaliaan", email = "rahuljsaliaan@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13 <4.0"
dependencies = [
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-openai (>=0.3.14,<0.4.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "langchainhub (>=0.1.21,<0.2.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
]

[tool.poetry]
packages = [{ include = "first_glance", from = "src" }]

[tool.poetry.scripts]
start = "bin.runner:run"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
